# bachelor-thesis

./: .gitignore  CLAUDE.md  README.md
code/: pyproject.toml
code/configs/: 31b-finance-n200.yaml  31b-medicine-n200.yaml  31b-n1000.yaml  31b-open_qa-n200.yaml  31b-reddit_eli5-n200.yaml  31b-smoke.yaml  31b-wiki_csai-n200.yaml  base.yaml  calibration-default.yaml  calibration-large.yaml  calibration-smoke.yaml  e4b-finance-n200.yaml  e4b-medicine-n200.yaml  e4b-n1000.yaml  e4b-open_qa-n200.yaml  e4b-reddit_eli5-n200.yaml  e4b-wiki_csai-n200.yaml  faithfulness-default.yaml  faithfulness-large.yaml  faithfulness-smoke.yaml  induction-default.yaml  induction-large.yaml  induction-smoke.yaml  smoke.yaml  splits.yaml
code/scripts/: classify_draft_meta_test.py  classify_draft_sections.py  classify_with_reasoning.py  run_solidified_pipeline.sh
code/src/aitd/: calibration.py  classifier.py  data.py  evaluation.py  faithfulness.py  insights.py  ollama_client.py  plots.py  policy.py  run.py
docs/: decisions.md  draft-skeleton.md  inl5-draft-v1.md  inl5-draft-v2.md  inl5-draft-v3.md  logprob-spike.md  ollama-config.md  operating-brief.md  outline.md  scope-audit.md  thread-a-calibration.md  thread-b-policy-induction.md  thread-b-results.md  threads.md
logs/: RUNS.md
logs/meta-experiment/: baseline-v2.json  iter-1.json  iter-2.json  iter-3.json  iter-4-31b.json  iter-5-with-note.json  notes.md  solidified-pipeline-plan.md  v3-baseline-with-reasoning.json  v3-iter-1-with-reasoning.json
logs/policies/: 2026-04-23T21-10-04_6bedd0.md  (+4 more)
scripts/: ollama-env.sh
