[project]
name = "aitd"
version = "0.1.0"
description = "Explainable AI text detection via single-token LLM classification (KTH DM128X)"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub>=0.24",
    "ollama>=0.3.0",
    "tenacity>=8.2",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "rich>=13.7",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.scripts]
aitd-run = "aitd.run:main"
aitd-induce = "aitd.policy:main"
aitd-ablate = "aitd.faithfulness:main"
aitd-calibrate = "aitd.calibration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitd"]

[tool.hatch.metadata]
allow-direct-references = true
